Ajustes e melhorias no código

--- a/7DaysOfCode/7DaysOfCode/appsettings.Development.json
+++ b/7DaysOfCode/7DaysOfCode/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Connections": {
+    "PokeApi": "https://pokeapi.co/api/v2/pokemon/"
   }
 }
